--- a/src/components/Block/index.css
+++ b/src/components/Block/index.css
@@ -1,8 +1,14 @@
 .block {
     border: 1px solid gray;
     border-radius: 10px;
-    width: fit-content;
+    width: 40px;
+    height: 40px;
     padding: 20px;
+    margin: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 h2 {
